# you-get.exe

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  README.md  README_cn.md  build.bat  build.py  pyproject.toml
.github/workflows/: build.yml  release.yml
devscripts/: archive.bat  build-and-log.bat  init.bat  update.bat  use-proxy.bat  use-proxy.example.conf
doc/: PyInstaller-Options.md  README.md
repository/_extractors/: __init__.py
scripts/: __init__.py  artifact.py  config.py  echo.py  utils.py  versions.py
scripts/ci/: main.py  release_notes.md.tmpl  release_notes.py
scripts/dev/: archive.bat  archive.py  build-and-log.bat  build-and-log.py  prepare.bat  prepare.py  simulate_files_in_ci.py
