[tool.poetry]
name = "you-get.exe"
version = "0.1.0"
description = "You-Get unofficial build executable for Windows"
authors = ["Lussac Zheng <lussaczheng@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8, <3.13, !=3.10.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = ">4.0, !=5.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
